--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -26,6 +28,12 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <p class="username"> click here </p>
+      
+      <span> Room: <select id="roomSelecst"></select></span>
+      <form id="send"><input id="message" type='text'><input class='submit' type='submit'></form>
+
+      
     </div>
     <div id="chats"></div>
   </body>
