Display messages in browser, room names in menu

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
       <!-- Your HTML goes here! -->
       <p class="username"> click here </p>
       
-      <span> Room: <select id="roomSelecst"></select></span>
+      <span> Room: <select id="roomSelect"></select></span>
       <form id="send"><input id="message" type='text'><input class='submit' type='submit'></form>
 
       
