Add username and submit features

--- a/client/index.html
+++ b/client/index.html
@@ -27,8 +27,8 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
-      <p class="username"> click here </p>
+      <!-- Your HTML goes here! 
+      <p class="username"> click here </p>-->
       
       <span> Room: <select id="roomSelect"></select></span>
       <form id="send"><input id="message" type='text'><input class='submit' type='submit'></form>
